[package]
name = "tmp"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.0-alpha"
megaui-macroquad = "0.1"
glam = "*"

[patch.crates-io]
macroquad = { git = "https://github.com/not-fl3/macroquad" }
megaui-macroquad = { git="https://github.com/not-fl3/megaui-macroquad" }

